--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="CalculatorStyle.css">
+    <link rel="stylesheet" type="text/css" href="CalculatorStyle.css">
 </head>
 <body>
     <div class="page">
